--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-Package Control.last-run
-Package Control.ca-list
-Package Control.ca-bundle
-Package Control.system-ca-bundle
-Package Control.merged-ca-bundle
-Package Control.cache/
-Package Control.ca-certs/
+Package\ Control.last-run
+Package\ Control.ca-list
+Package\ Control.ca-bundle
+Package\ Control.system-ca-bundle
+Package\ Control.merged-ca-bundle
+Package\ Control.cache/
+Package\ Control.ca-certs/
 SublimeLinter/*.tmTheme
-
+oscrypto-ca-bundle.crt
+Package\ Control.last-run
+Package\ Control.user-ca-bundle
